# investing-agents

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/investing_agents/: __init__.py  __main__.py  a2a_client_utils.py  agent_executor.py  streamlit_app.py  streamlit_launcher.py  test_client.py
tests/: test_a2a_client_utils.py  test_agent_executor.py  test_main.py
