[project]
name = "investing-agents"
version = "0.1.0"
description = "A2A Server for Investment Strategy Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.1.0",
    "google-generativeai>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.25.2", "ruff>=0.12.8"]
